tests/ui/imports/show-private-items-issue-138626.stderr
error[E0432]: unresolved import `crate::two::foo::Foo`
  --> $DIR/show-private-items-issue-138626.rs:16:13
   |
LL |     pub use crate::two::foo::Foo;
   |             ^^^^^^^^^^^^^^^^^^^^ no `Foo` in `two::foo`
   |
note: struct `two::foo::bar::Foo` exists but is inaccessible
  --> $DIR/show-private-items-issue-138626.rs:12:13
   |
LL |             pub struct Foo;
   |             ^^^^^^^^^^^^^^^ not accessible
help: consider importing this struct through its public re-export instead
   |
LL -     pub use crate::two::foo::Foo;
LL +     pub use one::Foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
